--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,32 @@ html, body {
   overflow: hidden;
 }
 
+/* loader overlay */
+#loader {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+.loader {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #fff;
+  border-top: 5px solid transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
+
+/* hide flipbook until loader finishes */
 .viewport {
+  visibility: hidden;
   position: absolute;
   top: 0; left: 0;
   width: 100%;
